fixes mistake for admin users can't crud articles

--- a/test/fixtures/articles.yml
+++ b/test/fixtures/articles.yml
@@ -4,7 +4,7 @@ curious:
   category: 'curious'
   content: 'Lorem Ipsum is simply dummy text of the printing and typesetting industry.'
 funny:
-  user: admin
+  user: editor_two
   title: 'funny title'
   category: 'funny'
   content: 'Lorem Ipsum is simply dummy text of the printing and typesetting industry.'
